force-app/main/default/objects/Element__c/Element__c.object-meta.xml
<CustomObject>
    <label>Element</label>
    <nameField>
        <label>Element Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Elements</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>