force-app/main/default/objects/Element__c/fields/File_Size__c.field-meta.xml
<CustomField>
    <fullName>File_Size__c</fullName>
    <label>File Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>