force-app/main/default/objects/Element__c/fields/Parent_Element__c.field-meta.xml
<CustomField>
    <fullName>Parent_Element__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Element</label>
    <referenceTo>Element__c</referenceTo>
    <relationshipLabel>Elements</relationshipLabel>
    <relationshipName>Elements</relationshipName>
    <type>Lookup</type>
</CustomField>