force-app/main/default/objects/Element__c/fields/Related_Object_ID__c.field-meta.xml
<CustomField>
    <fullName>Related_Object_ID__c</fullName>
    <label>Related Object ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>